buildscript {
	repositories {
		mavenCentral()
		 jcenter()
	}
}

plugins {
  id 'com.github.johnrengelman.shadow' version "7.1.2"
  id 'java'
  id 'eclipse'
  id "org.sonarqube" version "3.3"
}

group = 'com.viglet.turing.jdbc'

description = "turing-jdbc"

sourceCompatibility = 14
targetCompatibility = 14

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}

sonarqube {
  properties {
    property "sonar.projectKey", "turing-jdbc"
    property "sonar.organization", "viglet-turing"
    property "sonar.host.url", "https://sonarcloud.io"
  }
}

jar {
    baseName = 'turing-jdbc'
    version =  '0.3.5'
    manifest {
		attributes 'Main-Class': 'com.viglet.turing.tool.jdbc.JDBCImportTool'
	}
}

shadowJar {
   baseName = 'turing-jdbc'
   classifier = null
}

repositories {
		maven { url 'https://jitpack.io' }
    mavenCentral()
}

dependencies {
	implementation group: 'com.beust', name: 'jcommander', version: '1.82'	
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.1'	
	implementation group: 'org.json', name: 'json', version:'20211205'
	implementation group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.5.13'
	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version:'2.17.1'
  	implementation group: 'com.github.openturing', name: 'turing-java-sdk', version: 'f752da72b7'
	
	// Tika
    implementation group: 'org.apache.tika', name: 'tika-core', version:'2.2.1'
    implementation group: 'org.apache.tika', name: 'tika-parsers', version:'2.2.1'
    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.36.0.3'
    implementation group: 'com.github.jai-imageio', name: 'jai-imageio-jpeg2000', version: '1.4.0'
    
    // Commons
    implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
    
	
}

jar.enabled = false
build.dependsOn shadowJar
